fixing color on menu bar on mobile

--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -1,5 +1,5 @@
 .Menu {
-  background: #181818;
+  background: #2A2E35;
 
 }
 .Menu-links {
